public_html/ornefni/css/ornefni.css
h1, h2, h3, h4 {
    font-family: 'Eagle Lake', cursive;
}

.row [class^="col"] {
    margin: 0px 2%;
}

.header {
    background-color: #2c1d4e;
}
.header h1 {
    color: white;
}
.title {
    text-align: center;
    font-size: 70px;
    padding: 100px 0px;
    margin: 0;
}

@media only screen and (max-width: 719px) {  /* 720px */
    .title {
        font-size: 30px;
        padding: 20px;
    }
}

.forms {
    background-color: #fff6da;

    border-top: 2px solid #c09005;
}
.names {
    background-color: #fff6da;
    padding: 20px 0;
    min-height: 250px;
}
.names .error {
    color: #c01313;
    text-align: center;
}
.names ul {
    margin: 0px auto;
    width: 400px;
    padding: 30px 80px;

    font-size: 18px;
    border-width: 3px 0 3px 0;
    border-style: double;
    border-color: #c09005;
    background-color: #fff6da;
    list-style: none;
    font-family: "Oldenburg";
}

@media only screen and (max-width: 719px) {  /* 720px */
    .names {
        padding: 0px;
        min-height: 0;
    }
    .names ul {
        margin: 0px auto;
        width: auto;
        padding: 20px 30px;
    }
}

.names ul:before {
    content: "";

}

.names li {
    padding-left: 1.5em;
    position: relative;
}

.names li:after {
      content: "";
      height: .4em;
      width: .4em;
      display: block;
      background: #8f0f0f;
      position: absolute;
      transform: rotate(45deg);
      top: .65em;
      left: 0;
      border: 1px outset #8f0f0f;
}

.footer {
    padding: 30px 0;

    border-top: 2px solid #c09005;
    background-color: #242227;
    color: white;
}
.footer a {
    color: white;
    text-decoration: none;
}
.footer ul {
    list-style: none;
    margin: 0;
}
.footer img {
    float: right;
}

.tabs {
    text-align: center;
    box-sizing: border-box;
}

.tab {
    display: inline-block;
    text-align: center;
    width: 200px;
    height: 60px;
    margin: 0px 2px;
    margin-bottom: -2px;

    cursor: pointer;

    box-sizing: border-box;
    border-radius: 4px 4px 0px 0px;
    background-color: #fff6da;
    border: 2px solid #c09005;

    line-height: 2;
}
.tab.selected {
    border-bottom-width: 0px;
}
.tab h2 {
    margin: 0;
    height: 100%;
    vertical-align: middle;
    font-size: 28px;
}

@media only screen and (max-width: 719px) {  /* 720px */
    .tab {
        width: 45%;
        height: 50px;
    }
    .tab h2 {
        font-size: 22px;
    }
}
.groups {
    padding: 25px 0 15px;
}
.groups .radio-button {
    border: 3px double #bc9528;
    border-radius: 2px;
    margin: 10px 0;
}

.radio-button input {
    display: none;
}
.radio-button label {
    padding: 5px 10px;
    margin: 0px;
    display: block;
    cursor: pointer;
    font-family: "Oldenburg";
}
.radio-button.active {
    background-color: #fbecc1;
    border-color: #bc9528;
}

.seed {
    text-align: center;
    font-family: "Oldenburg";
}
.seed label {
    display: block;
}
.seed input {
    margin: 0 auto;
    border: 3px double #bc9528;
    border-radius: 2px;
    margin: 10px 0;
    padding: 8px 20px;
}

.button {
    text-align: center;
    padding: 10px 20px 30px;
}
.button .wrapper {
    width: 200px;
    border: 2px solid black;
    margin: 0 auto;
}
.button button {
    width: 100%;
    border: 2px outset #690c0c;
    background-color: #8f0f0f;
    color: white;
    padding: 10px 30px;

    cursor: pointer;

    font-size: 13px;
    text-transform: uppercase;
    font-family: 'Oldenburg', cursive;
}
.button button:hover,
.button button:active {
    background-color: #690c0c;
    border-style: inset;
    outline: none;
}

form.hidden {
    display: none;
}


@media only screen and (max-width: 719px) {  /* 720px */
    .heraldry {
        text-align: center;
    }
    .heraldry img {
        margin: 50px 0px;
        float: none;
    }
}

